added search endpoint in porduct feature